styles: refactored svg waves made the svgs hide behind the other elements fixed the position of the svgs

--- a/clips/luxury-banner/clip/clip.css
+++ b/clips/luxury-banner/clip/clip.css
@@ -17,13 +17,22 @@
   width: 100%;
   background-color: var(--backgroundColor);
   font-family: var(--mainFont);
-  padding: 1rem;
 }
 
 /* MAIN CONTENT */
 
+main {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
 .product-wrapper {
   position: relative;
+  right: 0;
+  height: 150px;
 }
 
 img {
@@ -41,12 +50,14 @@ img {
   width: 100%;
   height: 100%;
   position: absolute;
+  /* top: -20px; */
+  /* left: -20px; */
 }
 
 .svg-container-2 {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   bottom: -50px;
   right: -20px;
 }
